k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: istio-client
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: istio-client
